<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/common_menu"
        android:background="@color/colorAccent"
        app:title="@string/ads_history"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textColor="#ffffff"
    android:layout_marginTop="10dp"
    android:id="@+id/ft"
    android:paddingLeft="38dp"
    android:layout_below="@+id/toolbar"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"


        android:layout_centerHorizontal="true"
        android:id="@+id/st"
        android:layout_below="@+id/toolbar"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:paddingRight="38dp"
        android:layout_alignParentRight="true"
        android:id="@+id/lt"
        android:layout_below="@+id/toolbar"
        />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ft"
            android:paddingTop="14dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">



            <ListView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:id="@+id/mainListView1"/>

        </LinearLayout>
</RelativeLayout>