<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/circularbg"
    android:padding="2dip">

    <TextView android:text="@string/ad_name" android:id="@+id/rank_dialog_text1"
        android:textSize="24dp" android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <RatingBar
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:clickable="true"
        android:theme="@style/RatingBar"
        android:id="@+id/dialog_ratingbar" android:layout_gravity="center"
        android:numStars="5" android:stepSize="1.0" android:rating="0"
        android:isIndicator="false"/>

    <EditText
        android:layout_marginTop="5dp" android:layout_marginBottom="10dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:ems="9"

        android:hint="@string/add_comments_here"
        android:id="@+id/etcomments" android:layout_gravity="center"

        />

    <Button android:id="@+id/rank_dialog_button"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/rate_now"  android:focusable="false"
        android:layout_margin="5dip" android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:textSize="20dip" android:layout_width="fill_parent" />

</LinearLayout>


