<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/circularbg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/entryamount"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <EditText android:id="@+id/input_amount"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/rupeeicon"
           android:paddingStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fieldbg"
            android:hint="@string/amount"
            />


        <Button
            android:id="@+id/buttonOk"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:text="@string/ok"
            android:textColor="#FFF" />
    </LinearLayout>
</LinearLayout>